--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.servlet.context-path=/aggregate
 
 productDescriptionUrl=https://be78165c-223d-4ab2-b96b-9001c4948d62.mock.pstmn.io
 
-product.pricing.url = http://localhost:5000/api/v1/pricing/{id}
+product.pricing.url = http://localhost:5000/pricing/api/v1/pricing/{id}
 product.details.url = http://localhost:5010/productdetails/api/v1/productdetails/{id};
 
 logging.level.com.assignment.productaggregator = debug
